<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
    <TextView android:text="@string/title" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/textView1" android:layout_marginBottom="10dp"></TextView>
    <EditText android:layout_height="wrap_content" android:layout_width="match_parent" android:layout_marginBottom="10dp" android:id="@+id/InputTitle">
        <requestFocus></requestFocus>
    </EditText>
    <TextView android:text="@string/note" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/textView2" android:layout_marginBottom="10dp"></TextView>
    <EditText android:layout_height="wrap_content" android:layout_width="match_parent" android:inputType="textMultiLine" android:lines="10" android:maxLines="10" android:scrollbars="vertical" android:gravity="top" android:id="@+id/InputNote"></EditText>
    <LinearLayout android:id="@+id/linearLayout1" android:layout_width="match_parent" android:layout_height="wrap_content">
        <Button android:text="@string/Save" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/saveButton"></Button>
        <Button android:text="@string/Cancel" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/cancelButton"></Button>
    </LinearLayout>
    
</LinearLayout>
