<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
    <TextView android:text="TextView" 
    android:layout_height="wrap_content" 
    android:textAppearance="?android:attr/textAppearanceLarge" 
    android:layout_width="wrap_content" 
    android:id="@+id/textTitle" 
    android:layout_marginTop="10dp"></TextView>
    <TextView android:text="TextView" 
    android:id="@+id/textText" 
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content"></TextView>
    <LinearLayout android:id="@+id/linearLayout1" 
    android:layout_width="match_parent" 
    android:layout_height="wrap_content" 
    android:layout_marginTop="20dp">
        <Button android:text="@string/back" 
        android:layout_height="wrap_content" 
        android:layout_width="wrap_content" 
        android:id="@+id/backButton"></Button>
        <Button android:text="@string/edit" 
        android:layout_height="wrap_content" 
        android:layout_width="wrap_content" 
        android:id="@+id/editButton"></Button>
        <Button android:text="@string/delete" 
        android:layout_height="wrap_content" 
        android:layout_width="wrap_content" android:id="@+id/deleteButton"></Button>
    </LinearLayout>
    
</LinearLayout>
